# DroneCore

./: .gitmodules
core/: CMakeLists.txt
plugins/action/: CMakeLists.txt
plugins/offboard/: CMakeLists.txt  offboard.cpp  offboard.h  offboard_impl.cpp  offboard_impl.h
plugins/telemetry/: CMakeLists.txt  telemetry.cpp  telemetry.h  telemetry_impl.cpp  telemetry_impl.h
src/plugins/offboard/: offboard.cpp  offboard_impl.cpp  offboard_impl.h
src/plugins/offboard/include/plugins/offboard/: offboard.h
